<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btnToLoginScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_login" />

        <Button
            android:id="@+id/btnToRegisterScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_register" />

        <Button
            android:id="@+id/btnToContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_contacts_list" />

        <Button
            android:id="@+id/btnToChatScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_chat_screen" />

        <Button
            android:id="@+id/btnToAddContactScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_add_contact_screen" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>